--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/runtime": "^7.26.10",
     "brace-expansion": "^2.0.2",
     "@genkit-ai/googleai": "^1.14.1",
+    "tmp": "^0.2.4",
     "@genkit-ai/next": "^1.14.1",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-accordion": "^1.2.3",
@@ -68,5 +69,8 @@
     "tailwindcss": "^3.4.1",
     "tsx": "^4.16.2",
     "typescript": "^5"
+  },
+  "overrides": {
+    "tmp": "^0.2.4"
   }
 }
